--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,3 +32,5 @@ lazy_static = "1.4"
 tokio = { version = "1", features = ["full"] }  # Use the latest version of tokio
 once_cell = "1.10"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+rppal = "0.11"  # for GPIO control
