--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "feeder"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["kuzi"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -30,7 +30,11 @@ async-std = { version = "1.6", features = [ "attributes" ] }
 futures = "0.3.18"
 lazy_static = "1.4"
 tokio = { version = "1", features = ["full"] }  # Use the latest version of tokio
+uuid = { version = "1", features = ["v4"] }
 once_cell = "1.10"
+pretty_env_logger = "0.4"
+ble-peripheral-rust = { git = "https://github.com/rohitsangwan01/ble-peripheral-rust" }
+log = "0.4"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 rppal = "0.16"  # for GPIO control
