--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-simple-keyboard": "^3.8.35",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
